Fixed search filters layout issue

--- a/mysite/static/css/profile/base.css
+++ b/mysite/static/css/profile/base.css
@@ -90,3 +90,9 @@ div.input input[type=text] {
 .clear {
     clear: both;
 }
+
+#search-filters {
+    float: left;
+    width: 100%;
+    margin-right: 20px;
+}
